--- a/index.html
+++ b/index.html
@@ -49,6 +49,18 @@
 <body>
 <h1>Hello Scrolly!</h1>
 <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente deleniti cumque molestiae ducimus doloremque quibusdam voluptas deserunt quaerat recusandae. Quam adipisci molestias odit harum neque sunt temporibus itaque illum aliquid.</div>
+<div class="container">
+    <form id="repo_owner_form">
+      <div class="form-group">
+        <label for="repo">Enter the GitHub repo owner:</label>
+        <input type="text" class="form-control" id="owner" name="owner" placeholder="e.g. apache">
+        <label for="repo">Enter the GitHub repo name:</label>
+        <input type="text" class="form-control" id="repo" name="repo" placeholder="e.g. flink">
+      </div>
+      <button type="submit" class="btn btn-default">Submit</button>
+    </form>
+  </div>
+
 <section>
     <h2>Section 1</h2>
 <div class="holder">
