--- a/index.html
+++ b/index.html
@@ -71,11 +71,6 @@
         <div class="step">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt voluptates ducimus reiciendis! Rem voluptatum veritatis saepe nesciunt dignissimos atque magni dolorum illum explicabo fugiat? Voluptatibus consequuntur optio itaque quod soluta.</div>
         <div class="step">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt voluptates ducimus reiciendis! Rem voluptatum veritatis saepe nesciunt dignissimos atque magni dolorum illum explicabo fugiat? Voluptatibus consequuntur optio itaque quod soluta.</div>
         <div class="step">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt voluptates ducimus reiciendis! Rem voluptatum veritatis saepe nesciunt dignissimos atque magni dolorum illum explicabo fugiat? Voluptatibus consequuntur optio itaque quod soluta.</div>
-        <div class="step">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt voluptates ducimus reiciendis! Rem voluptatum veritatis saepe nesciunt dignissimos atque magni dolorum illum explicabo fugiat? Voluptatibus consequuntur optio itaque quod soluta.</div>
-        <div class="step">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt voluptates ducimus reiciendis! Rem voluptatum veritatis saepe nesciunt dignissimos atque magni dolorum illum explicabo fugiat? Voluptatibus consequuntur optio itaque quod soluta.</div>
-        <div class="step">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt voluptates ducimus reiciendis! Rem voluptatum veritatis saepe nesciunt dignissimos atque magni dolorum illum explicabo fugiat? Voluptatibus consequuntur optio itaque quod soluta.</div>
-        <div class="step">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt voluptates ducimus reiciendis! Rem voluptatum veritatis saepe nesciunt dignissimos atque magni dolorum illum explicabo fugiat? Voluptatibus consequuntur optio itaque quod soluta.</div>
-        <div class="step">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt voluptates ducimus reiciendis! Rem voluptatum veritatis saepe nesciunt dignissimos atque magni dolorum illum explicabo fugiat? Voluptatibus consequuntur optio itaque quod soluta.</div>
     </div>
 </div>
 </section>
@@ -85,6 +80,7 @@
 </section>
 <script src="https://d3js.org/d3.v6.js"></script>
 <script src="https://unpkg.com/scrollama"></script>
+<script src="./data_methods.js"></script>
 <script src="./main.js"></script>
 </body>
 </html>
