--- a/index.html
+++ b/index.html
@@ -39,6 +39,16 @@
             height: 400px;
         }
 
+        #chart-0-container {
+            width: 50%;
+            margin-right: 5px;
+            position: sticky;
+            top: 0px;
+            left: 0px;
+            width: 400px;
+            height: 400px;
+        }
+
         .step {
             margin-top: 50px;
             min-height: 600px;
@@ -64,7 +74,7 @@
 <section>
     <h2>Section 1</h2>
 <div class="holder">
-    <svg id="chart"></svg>
+    <div id="chart-0-container"></div>
     <div class="steps">
         <div class="step">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt voluptates ducimus reiciendis! Rem voluptatum veritatis saepe nesciunt dignissimos atque magni dolorum illum explicabo fugiat? Voluptatibus consequuntur optio itaque quod soluta.</div>
         <div class="step">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt voluptates ducimus reiciendis! Rem voluptatum veritatis saepe nesciunt dignissimos atque magni dolorum illum explicabo fugiat? Voluptatibus consequuntur optio itaque quod soluta.</div>
