--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
     </section>
     <script src="https://d3js.org/d3.v6.js"></script>
     <script src="https://unpkg.com/scrollama"></script>
+    <script src="./chartgen.js"></script>
     <script src="./data_methods.js"></script>
     <script src="./main.js"></script>
   </body>
