--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
         reiciendis illum at pariatur eaque, hic accusamus quos totam tempora!
       </div>
     </section>
+    <script src="https://cdn.jsdelivr.net/npm/date-fns@3.6.0/cdn.min.js"></script>
     <script src="https://d3js.org/d3.v6.js"></script>
     <script src="https://unpkg.com/scrollama"></script>
     <script src="./chartgen.js"></script>
