add some styles and copy

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GitHub Repo Visualizer</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -56,12 +57,9 @@
     </style>
   </head>
   <body>
-    <h1>Hello Scrolly!</h1>
+    <h1>Welcome to the GitHub Repository Visualizer!</h1>
     <div>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente deleniti
-      cumque molestiae ducimus doloremque quibusdam voluptas deserunt quaerat
-      recusandae. Quam adipisci molestias odit harum neque sunt temporibus
-      itaque illum aliquid.
+Enter the owner and name of the GitHub repository you would like to visualize. 
     </div>
     <div class="container">
       <form id="repo_owner_form">
@@ -93,44 +91,27 @@
         <div id="chart-0-container"></div>
         <div class="steps">
           <div class="step">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt
-            voluptates ducimus reiciendis! Rem voluptatum veritatis saepe
-            nesciunt dignissimos atque magni dolorum illum explicabo fugiat?
-            Voluptatibus consequuntur optio itaque quod soluta.
+Here's a breakdown of the programming languages comprising the files in the repository.
           </div>
           <div class="step">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt
-            voluptates ducimus reiciendis! Rem voluptatum veritatis saepe
-            nesciunt dignissimos atque magni dolorum illum explicabo fugiat?
-            Voluptatibus consequuntur optio itaque quod soluta.
+These are the top ten contributors to the repository.
           </div>
           <div class="step">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt
-            voluptates ducimus reiciendis! Rem voluptatum veritatis saepe
-            nesciunt dignissimos atque magni dolorum illum explicabo fugiat?
-            Voluptatibus consequuntur optio itaque quod soluta.
+This is the number of stargazers compared to the number of forks.
           </div>
           <div class="step">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt
-            voluptates ducimus reiciendis! Rem voluptatum veritatis saepe
-            nesciunt dignissimos atque magni dolorum illum explicabo fugiat?
-            Voluptatibus consequuntur optio itaque quod soluta.
+This is how long the repository has been active.
           </div>
           <div class="step">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt
-            voluptates ducimus reiciendis! Rem voluptatum veritatis saepe
-            nesciunt dignissimos atque magni dolorum illum explicabo fugiat?
-            Voluptatibus consequuntur optio itaque quod soluta.
+This is the size of the repository in kilobytes.
           </div>
         </div>
       </div>
     </section>
     <section>
-      <h2>the end</h2>
+      <h2>Thanks for scrolling!</h2>
       <div>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad explicabo
-        assumenda incidunt adipisci enim maiores sunt quas temporibus eos illo
-        reiciendis illum at pariatur eaque, hic accusamus quos totam tempora!
+I hope you enjoyed this visualization of your selected GitHub repository. To see more of my projects, visit my <a href="https://luciacerchie.dev/">website</a>.
       </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/date-fns@3.6.0/cdn.min.js"></script>
