add more styles

--- a/index.html
+++ b/index.html
@@ -11,15 +11,13 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
     <style></style>
   </head>
   <body>
     <h1>Welcome to the GitHub Repository Visualizer!</h1>
-    <div>
-      Enter the owner and name of the GitHub repository you would like to
-      visualize.
-    </div>
     <div class="error-message"></div>
     <div class="container">
       <form id="repo_owner_form">
@@ -68,9 +66,9 @@
         </div>
       </div>
     </section>
-    <section>
-      <h2>Thanks for scrolling!</h2>
-      <div>
+    <section id="end-section">
+      <div id="end-p">
+        Thanks for scrolling!
         I hope you enjoyed this visualization of your selected GitHub
         repository. To see more of my projects, visit my
         <a href="https://luciacerchie.dev/">website</a>.
