--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             in the repository.
           </div>
           <div class="step">
-            These are the top ten contributors to the repository.
+            These are the top ten contributors to the repository in terms of commit count.
           </div>
           <div class="step">
             This is the number of stargazers compared to the number of forks.
