--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="steps">
           <div class="step">
             Here's a breakdown of the programming languages comprising the files
-            in the repository.
+            in the repository. Mouse over or click on the chart to see the percentages.
           </div>
           <div class="step">
             These are the top contributors to the repository in terms of commit count.
