--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
           <button type="submit" class="btn btn-default">Submit</button>
         </div>
       </form>
+      <div id="scroll-info"></div>
     </div>
 
     <section>
